<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/>
    </parent>

    <groupId>com.astral</groupId>
    <artifactId>astral</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>astral</name>
    <description>Astral Management System</description>

    <modules>
        <module>astral-common</module>
        <module>astral-schema</module>
        <module>astral-dao</module>
        <module>astral-log</module>
        <module>astral-auth</module>
        <module>astral-system</module>
        <module>astral-monitor</module>
        <module>astral-sequence</module>
        <module>astral-plugin-api</module>
        <module>astral-plugin</module>
        <module>astral-plugin-demo</module>
        <module>astral-plugin-qt</module>
        <module>astral-plugin-feedback</module>
        <module>astral-server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

        <lombok.version>1.18.36</lombok.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <redisson.version>3.27.0</redisson.version>
        <caffeine.version>3.1.8</caffeine.version>
        <springdoc.version>2.3.0</springdoc.version>
        <hutool.version>5.8.25</hutool.version>
        <mysql.version>8.3.0</mysql.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-schema</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-log</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-monitor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-sequence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-plugin-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-plugin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-plugin-demo</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-plugin-qt</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.astral</groupId>
                <artifactId>astral-plugin-feedback</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>